--- a/index.html
+++ b/index.html
@@ -79,243 +79,73 @@
 
   <div class="flex">
     <!-- red -->
-    <div class="space-y-2 p-4">
-      <button class="bg-labred-100 hover:bg-labred-200 text-labgray-900 py-2 px-4 rounded">
-        CIELabRed: 100
-      </button>
-      <br>
-
-      <button class="bg-labred-200 hover:bg-labred-300 text-labgray-900 py-2 px-4 rounded">
-        CIELabRed: 200
-      </button>
-      <br>
-
-      <button class="bg-labred-300 hover:bg-labred-400 text-labgray-900 py-2 px-4 rounded">
-        CIELabRed: 300
-      </button>
-      <br>
-
-      <button class="bg-labred-400 hover:bg-labred-500 text-white py-2 px-4 rounded">
-        CIELabRed: 400
-      </button>
-      <br>
-
-      <button class="bg-labred-500 hover:bg-labred-600 text-white py-2 px-4 rounded">
-        CIELabRed: 500
-      </button>
-      <br>
-
-      <button class="bg-labred-600 hover:bg-labred-500 text-white py-2 px-4 rounded">
-        CIELabRed: 600
-      </button>
-      <br>
-
-      <button class="bg-labred-700 hover:bg-labred-600 text-white py-2 px-4 rounded">
-        CIELabRed: 700
-      </button>
-      <br>
-
-      <button class="bg-labred-800 hover:bg-labred-700 text-white py-2 px-4 rounded">
-        CIELabRed: 800
-      </button>
-      <br>
-
-      <button class="bg-labred-900 hover:bg-labred-800 text-white py-2 px-4 rounded">
-        CIELabRed: 900
-      </button>
+    <div class="flex flex-col space-y-2 p-4">
+      <button class="bg-labred-100 hover:bg-labred-200 text-labgray-900 py-2 px-4 rounded">CIELabRed: 100</button>
+      <button class="bg-labred-200 hover:bg-labred-300 text-labgray-900 py-2 px-4 rounded">CIELabRed: 200</button>
+      <button class="bg-labred-300 hover:bg-labred-400 text-labgray-900 py-2 px-4 rounded">CIELabRed: 300</button>
+      <button class="bg-labred-400 hover:bg-labred-500 text-white py-2 px-4 rounded">CIELabRed: 400</button>
+      <button class="bg-labred-500 hover:bg-labred-600 text-white py-2 px-4 rounded">CIELabRed: 500</button>
+      <button class="bg-labred-600 hover:bg-labred-500 text-white py-2 px-4 rounded">CIELabRed: 600</button>
+      <button class="bg-labred-700 hover:bg-labred-600 text-white py-2 px-4 rounded">CIELabRed: 700</button>
+      <button class="bg-labred-800 hover:bg-labred-700 text-white py-2 px-4 rounded">CIELabRed: 800</button>
+      <button class="bg-labred-900 hover:bg-labred-800 text-white py-2 px-4 rounded">CIELabRed: 900</button>
     </div>
 
     <!-- green -->
-    <div class="space-y-2 p-4">
-      <button class="bg-labgreen-100 hover:bg-labgreen-200 text-labgray-900 py-2 px-4 rounded">
-        CIELabGreen: 100
-      </button>
-      <br>
-
-      <button class="bg-labgreen-200 hover:bg-labgreen-300 text-labgray-900 py-2 px-4 rounded">
-        CIELabGreen: 200
-      </button>
-      <br>
-
-      <button class="bg-labgreen-300 hover:bg-labgreen-400 text-labgray-900 py-2 px-4 rounded">
-        CIELabGreen: 300
-      </button>
-      <br>
-
-      <button class="bg-labgreen-400 hover:bg-labgreen-500 text-white py-2 px-4 rounded">
-        CIELabGreen: 400
-      </button>
-      <br>
-
-      <button class="bg-labgreen-500 hover:bg-labgreen-600 text-white py-2 px-4 rounded">
-        CIELabGreen: 500
-      </button>
-      <br>
-
-      <button class="bg-labgreen-600 hover:bg-labgreen-500 text-white py-2 px-4 rounded">
-        CIELabGreen: 600
-      </button>
-      <br>
-
-      <button class="bg-labgreen-700 hover:bg-labgreen-600 text-white py-2 px-4 rounded">
-        CIELabGreen: 700
-      </button>
-      <br>
-
-      <button class="bg-labgreen-800 hover:bg-labgreen-700 text-white py-2 px-4 rounded">
-        CIELabGreen: 800
-      </button>
-      <br>
-
-      <button class="bg-labgreen-900 hover:bg-labgreen-800 text-white py-2 px-4 rounded">
-        CIELabGreen: 900
-      </button>
+    <div class="flex flex-col space-y-2 p-4">
+      <button class="bg-labgreen-100 hover:bg-labgreen-200 text-labgray-900 py-2 px-4 rounded">CIELabGreen: 100</button>
+      <button class="bg-labgreen-200 hover:bg-labgreen-300 text-labgray-900 py-2 px-4 rounded">CIELabGreen: 200</button>
+      <button class="bg-labgreen-300 hover:bg-labgreen-400 text-labgray-900 py-2 px-4 rounded">CIELabGreen: 300</button>
+      <button class="bg-labgreen-400 hover:bg-labgreen-500 text-white py-2 px-4 rounded">CIELabGreen: 400</button>
+      <button class="bg-labgreen-500 hover:bg-labgreen-600 text-white py-2 px-4 rounded">CIELabGreen: 500</button>
+      <button class="bg-labgreen-600 hover:bg-labgreen-500 text-white py-2 px-4 rounded">CIELabGreen: 600</button>
+      <button class="bg-labgreen-700 hover:bg-labgreen-600 text-white py-2 px-4 rounded">CIELabGreen: 700</button>
+      <button class="bg-labgreen-800 hover:bg-labgreen-700 text-white py-2 px-4 rounded">CIELabGreen: 800</button>
+      <button class="bg-labgreen-900 hover:bg-labgreen-800 text-white py-2 px-4 rounded">CIELabGreen: 900</button>
     </div>
 
     <!-- blue -->
-    <div class="space-y-2 p-4">
-      <button class="bg-labblue-100 hover:bg-labblue-200 text-labgray-900 py-2 px-4 rounded">
-        CIELabBlue: 100
-      </button>
-      <br>
-
-      <button class="bg-labblue-200 hover:bg-labblue-300 text-labgray-900 py-2 px-4 rounded">
-        CIELabBlue: 200
-      </button>
-      <br>
-
-      <button class="bg-labblue-300 hover:bg-labblue-400 text-labgray-900 py-2 px-4 rounded">
-        CIELabBlue: 300
-      </button>
-      <br>
-
-      <button class="bg-labblue-400 hover:bg-labblue-500 text-white py-2 px-4 rounded">
-        CIELabBlue: 400
-      </button>
-      <br>
-
-      <button class="bg-labblue-500 hover:bg-labblue-600 text-white py-2 px-4 rounded">
-        CIELabBlue: 500
-      </button>
-      <br>
-
-      <button class="bg-labblue-600 hover:bg-labblue-500 text-white py-2 px-4 rounded">
-        CIELabBlue: 600
-      </button>
-      <br>
-
-      <button class="bg-labblue-700 hover:bg-labblue-600 text-white py-2 px-4 rounded">
-        CIELabBlue: 700
-      </button>
-      <br>
-
-      <button class="bg-labblue-800 hover:bg-labblue-700 text-white py-2 px-4 rounded">
-        CIELabBlue: 800
-      </button>
-      <br>
-
-      <button class="bg-labblue-900 hover:bg-labblue-800 text-white py-2 px-4 rounded">
-        CIELabBlue: 900
-      </button>
-
+    <div class="flex flex-col space-y-2 p-4">
+      <button class="bg-labblue-100 hover:bg-labblue-200 text-labgray-900 py-2 px-4 rounded">CIELabBlue: 100</button>
+      <button class="bg-labblue-200 hover:bg-labblue-300 text-labgray-900 py-2 px-4 rounded">CIELabBlue: 200</button>
+      <button class="bg-labblue-300 hover:bg-labblue-400 text-labgray-900 py-2 px-4 rounded">CIELabBlue: 300</button>
+      <button class="bg-labblue-400 hover:bg-labblue-500 text-white py-2 px-4 rounded">CIELabBlue: 400</button>
+      <button class="bg-labblue-500 hover:bg-labblue-600 text-white py-2 px-4 rounded">CIELabBlue: 500</button>
+      <button class="bg-labblue-600 hover:bg-labblue-500 text-white py-2 px-4 rounded">CIELabBlue: 600</button>
+      <button class="bg-labblue-700 hover:bg-labblue-600 text-white py-2 px-4 rounded">CIELabBlue: 700</button>
+      <button class="bg-labblue-800 hover:bg-labblue-700 text-white py-2 px-4 rounded">CIELabBlue: 800</button>
+      <button class="bg-labblue-900 hover:bg-labblue-800 text-white py-2 px-4 rounded">CIELabBlue: 900</button>
     </div>
 
     <!-- yellow -->
-    <div class="space-y-2 p-4">
-      <button class="bg-labyellow-100 hover:bg-labyellow-200 text-labgray-900 py-2 px-4 rounded">
-        CIELabYello: 100
-      </button>
-      <br>
-
-      <button class="bg-labyellow-200 hover:bg-labyellow-300 text-labgray-900 py-2 px-4 rounded">
-        CIELabYello: 200
-      </button>
-      <br>
-
-      <button class="bg-labyellow-300 hover:bg-labyellow-400 text-labgray-900 py-2 px-4 rounded">
-        CIELabYello: 300
-      </button>
-      <br>
-
-      <button class="bg-labyellow-400 hover:bg-labyellow-500 text-white py-2 px-4 rounded">
-        CIELabYello: 400
-      </button>
-      <br>
-
-      <button class="bg-labyellow-500 hover:bg-labyellow-600 text-white py-2 px-4 rounded">
-        CIELabYello: 500
-      </button>
-      <br>
-
-      <button class="bg-labyellow-600 hover:bg-labyellow-500 text-white py-2 px-4 rounded">
-        CIELabYello: 600
-      </button>
-      <br>
-
-      <button class="bg-labyellow-700 hover:bg-labyellow-600 text-white py-2 px-4 rounded">
-        CIELabYello: 700
-      </button>
-      <br>
-
-      <button class="bg-labyellow-800 hover:bg-labyellow-700 text-white py-2 px-4 rounded">
-        CIELabYello: 800
-      </button>
-      <br>
-
-      <button class="bg-labyellow-900 hover:bg-labyellow-800 text-white py-2 px-4 rounded">
-        CIELabYello: 900
-      </button>
+    <div class="flex flex-col space-y-2 p-4">
+      <button class="bg-labyellow-100 hover:bg-labyellow-200 text-labgray-900 py-2 px-4 rounded">CIELabYello: 100</button>
+      <button class="bg-labyellow-200 hover:bg-labyellow-300 text-labgray-900 py-2 px-4 rounded">CIELabYello: 200</button>
+      <button class="bg-labyellow-300 hover:bg-labyellow-400 text-labgray-900 py-2 px-4 rounded">CIELabYello: 300</button>
+      <button class="bg-labyellow-400 hover:bg-labyellow-500 text-white py-2 px-4 rounded">CIELabYello: 400</button>
+      <button class="bg-labyellow-500 hover:bg-labyellow-600 text-white py-2 px-4 rounded">CIELabYello: 500</button>
+      <button class="bg-labyellow-600 hover:bg-labyellow-500 text-white py-2 px-4 rounded">CIELabYello: 600</button>
+      <button class="bg-labyellow-700 hover:bg-labyellow-600 text-white py-2 px-4 rounded">CIELabYello: 700</button>
+      <button class="bg-labyellow-800 hover:bg-labyellow-700 text-white py-2 px-4 rounded">CIELabYello: 800</button>
+      <button class="bg-labyellow-900 hover:bg-labyellow-800 text-white py-2 px-4 rounded">CIELabYello: 900</button>
     </div>
 
     <!-- black -->
-    <div class="space-y-2 p-4">
-      <button class="bg-labgray-100 hover:bg-labgray-200 text-labgray-900 py-2 px-4 rounded">
-        CIELabgray: 100
-      </button>
-      <br>
-
-      <button class="bg-labgray-200 hover:bg-labgray-300 text-labgray-900 py-2 px-4 rounded">
-        CIELabgray: 200
-      </button>
-      <br>
-
-      <button class="bg-labgray-300 hover:bg-labgray-400 text-labgray-900 py-2 px-4 rounded">
-        CIELabgray: 300
-      </button>
-      <br>
-
-      <button class="bg-labgray-400 hover:bg-labgray-500 text-white py-2 px-4 rounded">
-        CIELabgray: 400
-      </button>
-      <br>
-
-      <button class="bg-labgray-500 hover:bg-labgray-600 text-white py-2 px-4 rounded">
-        CIELabgray: 500
-      </button>
-      <br>
-
-      <button class="bg-labgray-600 hover:bg-labgray-500 text-white py-2 px-4 rounded">
-        CIELabgray: 600
-      </button>
-      <br>
-
-      <button class="bg-labgray-700 hover:bg-labgray-600 text-white py-2 px-4 rounded">
-        CIELabgray: 700
-      </button>
-      <br>
-
-      <button class="bg-labgray-800 hover:bg-labgray-700 text-white py-2 px-4 rounded">
-        CIELabgray: 800
-      </button>
-      <br>
-
-      <button class="bg-labgray-900 hover:bg-labgray-800 text-white py-2 px-4 rounded">
-        CIELabgray: 900
-      </button>
+    <div class="flex flex-col space-y-2 p-4">
+      <button class="bg-labgray-100 hover:bg-labgray-200 text-labgray-900 py-2 px-4 rounded">CIELabgray: 100</button>
+      <button class="bg-labgray-200 hover:bg-labgray-300 text-labgray-900 py-2 px-4 rounded">CIELabgray: 200</button>
+      <button class="bg-labgray-300 hover:bg-labgray-400 text-labgray-900 py-2 px-4 rounded">CIELabgray: 300</button>
+      <button class="bg-labgray-400 hover:bg-labgray-500 text-white py-2 px-4 rounded">CIELabgray: 400</button>
+      <button class="bg-labgray-500 hover:bg-labgray-600 text-white py-2 px-4 rounded">CIELabgray: 500</button>
+      <button class="bg-labgray-600 hover:bg-labgray-500 text-white py-2 px-4 rounded">CIELabgray: 600</button>
+      <button class="bg-labgray-700 hover:bg-labgray-600 text-white py-2 px-4 rounded">CIELabgray: 700</button>
+      <button class="bg-labgray-800 hover:bg-labgray-700 text-white py-2 px-4 rounded">CIELabgray: 800</button>
+      <button class="bg-labgray-900 hover:bg-labgray-800 text-white py-2 px-4 rounded">CIELabgray: 900</button>
     </div>
   </div>
 
   <h2 class="p-4 text-labgray-900 text-2xl">Code</h2>
+
   <pre class="bg-labgray-800 text-white p-4">
   {
     theme: {
