--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@
 
     <!-- gray -->
     <div class="flex flex-col space-y-2 p-4">
-      <button class="bg-labgray-100 hover:bg-labgray-200 text-labgray-900 py-2 px-4 rounded">gray: 100</button>
-      <button class="bg-labgray-200 hover:bg-labgray-300 text-labgray-900 py-2 px-4 rounded">gray: 200</button>
-      <button class="bg-labgray-300 hover:bg-labgray-400 text-labgray-900 py-2 px-4 rounded">gray: 300</button>
-      <button class="bg-labgray-400 hover:bg-labgray-500 text-white py-2 px-4 rounded">gray: 400</button>
-      <button class="bg-labgray-500 hover:bg-labgray-600 text-white py-2 px-4 rounded">gray: 500</button>
-      <button class="bg-labgray-600 hover:bg-labgray-500 text-white py-2 px-4 rounded">gray: 600</button>
-      <button class="bg-labgray-700 hover:bg-labgray-600 text-white py-2 px-4 rounded">gray: 700</button>
-      <button class="bg-labgray-800 hover:bg-labgray-700 text-white py-2 px-4 rounded">gray: 800</button>
-      <button class="bg-labgray-900 hover:bg-labgray-800 text-white py-2 px-4 rounded">gray: 900</button>
+      <button class="bg-labgray-100 hover:bg-labgray-200 text-labgray-900 py-2 px-4 rounded">Gray: 100</button>
+      <button class="bg-labgray-200 hover:bg-labgray-300 text-labgray-900 py-2 px-4 rounded">Gray: 200</button>
+      <button class="bg-labgray-300 hover:bg-labgray-400 text-labgray-900 py-2 px-4 rounded">Gray: 300</button>
+      <button class="bg-labgray-400 hover:bg-labgray-500 text-white py-2 px-4 rounded">Gray: 400</button>
+      <button class="bg-labgray-500 hover:bg-labgray-600 text-white py-2 px-4 rounded">Gray: 500</button>
+      <button class="bg-labgray-600 hover:bg-labgray-500 text-white py-2 px-4 rounded">Gray: 600</button>
+      <button class="bg-labgray-700 hover:bg-labgray-600 text-white py-2 px-4 rounded">Gray: 700</button>
+      <button class="bg-labgray-800 hover:bg-labgray-700 text-white py-2 px-4 rounded">Gray: 800</button>
+      <button class="bg-labgray-900 hover:bg-labgray-800 text-white py-2 px-4 rounded">Gray: 900</button>
     </div>
   </div>
 
